--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ke Li"
-  avatar           : "profile.png"
+  avatar           : "personal.jpg"
   bio              : "Research Assistant at Dr.Revati Kumar's Lab, Louisiana State University, expert in Computational Chemistry"
   location         : "Location"
   employer         :
