--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Ke Li"
   avatar           : "personal.jpg"
   bio              : "Research Assistant at Dr.Revati Kumar's Lab, Louisiana State University, expert in Computational Chemistry"
-  location         : "Location"
+  location         : 
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=uB84ThoAAAAJ&hl=en"
