--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/like201707"
+  github           : "like201707"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/ke-li-7b4895130"
+  linkedin         : "ke-li-7b4895130"
   orcid            : "https://orcid.org/0000-0002-3140-3983"
   pinterest        :
   soundcloud       :
