--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,10 +1,10 @@
 # Authors
 
 Name Name:
-  name        : "Ke Li"
-  uri         : "like201707.github.io"
-  email       : "kli19@lsu.edu"
-  bio         : "Research Assistant at Dr.Revati Kumar's Lab, Louisiana State University, expert in Computational Chemistry"
+  name        : "Zhicheng Jin"
+  uri         : "jinzc74838.github.io/"
+  email       : "jinzc74838@gmail.com"
+  bio         : "Post-Doctoral Fellow at Dr.Jesse Jokerst's Lab, UC San Deigo, Expert in Nanochemistry"
   avatar      : "bio-photo-2.jpg"
   twitter     : 
   google_plus : 
