--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,6 +5,6 @@ Name Name:
   uri         : "jinzc74838.github.io/"
   email       : "jinzc74838@gmail.com"
   bio         : "Post-Doctoral Fellow at Dr.Jesse Jokerst's Lab, UC San Deigo, Expert in Nanochemistry"
-  avatar      : "bio-photo-2.jpg"
-  twitter     : 
+  avatar      : "Zhicheng-bio.png"
+  twitter     : "https://twitter.com/mattoussigroup"
   google_plus : 
